# mercado-livre-api

./: .env.example  .gitignore  README.md  main.py  mercado-livre.db  pyproject.toml
src/: config.py  main.py  utils.py
src/db/: categorias.py  categories.py  db.py  produtos.py  sub_categories.py  subcategorias.py
src/services/: scraper.py
